# monitor-system

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build_debug.py  conanfile.py  conanfile.txt
agent_service/: .gitignore  README.md  architecture_overview.md  go.mod  go.sum  main.go
agent_service/api/chat/: chat.go
agent_service/api/chat/v1/: chat.go
agent_service/cmd/server/: main.go
agent_service/cmd/tools/ai-ops/: main.go
agent_service/cmd/tools/chat/: main.go
agent_service/cmd/tools/knowledge/: main.go
agent_service/cmd/tools/llm-tool/: main.go
agent_service/cmd/tools/recall/: main.go
agent_service/docs/: README.md
agent_service/hack/: config.yaml  hack-cli.mk  hack.mk
agent_service/internal/agent/: eino_test.go  service.go  service_test.go  tools.go  tools_test.go
agent_service/internal/ai/callback/: callback.go
agent_service/internal/ai/embedder/: embedder.go
agent_service/internal/auth/: context.go  middleware.go  middleware_test.go  token.go
agent_service/internal/config/: config.go  config_test.go
agent_service/internal/gateway/: client.go  client_test.go
agent_service/internal/httpapi/: router.go  router_test.go
agent_service/internal/knowledge/: eino_test.go  milvus.go  store.go  store_test.go
agent_service/internal/memory/: memory.go  memory_test.go
agent_service/internal/model/: eino_test.go  model.go  model_test.go
agent_service/internal/response/: response.go  response_test.go
agent_service/internal/sse/: sse.go  sse_test.go
agent_service/manifest/config/: config.yaml
agent_service/manifest/docker/: Dockerfile
agent_service/utility/client/: client.go
agent_service/utility/common/: common.go
agent_service/utility/log_call_back/: log_call_back.go
agent_service/utility/mem/: mem.go
agent_service/utility/middleware/: middleware.go
api_gateway/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  go.sum
api_gateway/cmd/server/: main.go
api_gateway/internal/auth/: auth_test.go  gorm_store_test.go  interface.go  middleware.go  mysql_store.go  service.go  token.go  types.go
api_gateway/internal/config/: config.go
api_gateway/internal/grpcclient/: client.go  descriptor.go  scope.go
api_gateway/internal/handler/: auth.go  auth_routes_test.go  health.go  query.go  query_test.go  router.go  version.go
api_gateway/internal/logger/: logger.go
api_gateway/internal/response/: response.go
configs/: README.md  app.env  app.example.env  manager.env  manager.example.env
deploy/: docker-compose.yml
manager/: CMakeLists.txt  QueryManager.h  README.md  REVIEW.md
manager/include/: HostManager.h  ManagerConfig.h  ManagerDispatcher.h  ManagerMetrics.h  MysqlConfig.h  MysqlConnectionPool.h  QueryManager.h  RedisConnectionPool.h  WorkerIdentity.h
manager/include/rpc/: GrpcServer.h  QueryService.h  RpcClient.h
manager/sql table/: init_server_performance.sql
manager/src/: HostManager.cc  ManagerConfig.cc  ManagerConfig.cpp  ManagerDispatcher.cc  ManagerDispatcher.cpp  MysqlConnectionPool.cpp  QueryManager.cc  RedisConnectionPool.cc  main.cc  main.cpp
manager/src/rpc/: GrpcServer.cc  GrpcServer.cpp  QueryService.cc  QueryService.cpp  RpcClient.cc
openspec/changes/unify-tenant-team-cluster-scope/: design.md  proposal.md  tasks.md
openspec/specs/agent-memory/: spec.md
openspec/specs/identity-access-scope/: spec.md
openspec/specs/monitor-asset-scope/: spec.md
proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  disk_info.proto  mem_info.proto  monitor_info.proto  mysql_info.proto  net_info.proto  query_api.proto  redis_info.proto
sql table/: README.md  agent_memory_schema.sql  identity_access_schema.sql  init_server_performance.sql  monitor_asset_schema.sql
tests/: CMakeLists.txt  README.md  manager_pressure_test.sh  manager_scope_tests.cc  manager_stress_test.cc  manager_stress_test.cpp  manager_stress_test_report.md  simulated_workers_push.cc
web/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
web/src/api/: agent.ts  auth.ts  client.ts  dashboard.ts
web/src/auth/: AuthContext.tsx  session.ts
web/src/components/: ClusterStats.tsx  DataTable.tsx  HealthGauge.tsx  MetricLineChart.tsx  PageLayout.tsx  PaginationControls.tsx  ProtectedRoute.tsx  QueryControls.tsx  SectionState.tsx  ServerTable.tsx  StatCard.tsx  StatusBadge.tsx
web/src/pages/: AIOpsPage.tsx  AnomaliesPage.tsx  Dashboard.tsx  DetailPage.tsx  LoginPage.tsx  PerformancePage.tsx  ServerDetailPage.tsx  ServersPage.tsx  SystemPage.tsx  TrendPage.tsx  UsersPage.tsx
web/src/types/: api.ts
web/src/utils/: format.ts
worker/: CMakeLists.txt  README.md  main.cc
worker/include/monitor/: CpuLoadMonitor.h  CpuSoftirqMonitor.h  CpuStatMonitor.h  DiskMonitor.h  HostInfoMonitor.h  MemMonitor.h  MetricCollector.h  MonitorInter.h  MonitorStructs.h  MysqlMonitor.h  NetEbpfMonitor.h  NetMonitor.h  RedisMonitor.h  UserMonitor.h  net_stats.skel.h
worker/include/rpc/: GrpcManagerImpl.h  MonitorPusher.h
worker/include/utils/: ReadFile.h
worker/monitor/: CpuLoadMonitor.h  CpuSoftirqMonitor.h  MemMonitor.h  MetricCollector.h  MonitorInter.h  NetEbpfMonitor.h  NetMonitor.h  UserMonitor.h
worker/src/: MetricCollector.cc  main.cc  main.cpp
worker/src/ebpf/: Makefile  net_stats.bpf.c  net_stats.h
worker/src/ebpf/.output/: net_stats.skel.h
worker/src/kmod/: CpuStatCollector.c  Makefile  SoftirqCollector.c
worker/src/monitor/: CpuLoadMonitor.cc  CpuLoadMonitor.cpp  CpuSoftirqMonitor.cc  CpuSoftirqMonitor.cpp  CpuStatMonitor.cc  DiskMonitor.cc  DiskMonitor.cpp  HostInfoMonitor.cc  HostInfoMonitor.cpp  MemMonitor.cc  MetricCollector.cc  MysqlMonitor.cc  NetEbpfMonitor.cc  NetEbpfMonitor.cpp  NetMonitor.cc  RedisMonitor.cc  UserMonitor.cc
worker/src/rpc/: GrpcManagerImpl.cc  MonitorPusher.cc  MonitorPusher.cpp
worker/src/utils/: ReadFile.cc
worker/test/: CMakeLists.txt  TestKmodCpuStat.c  TestKmodSoftirq.c  TestNetEbpf.cc  TestUserMonitor  TestUserMonitor.cc  TestUserMonitor.cpp
(+108 files in other folders)
